fix scaling on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -347,11 +347,13 @@
       color: white;
       @media screen and (max-width: $tablet_bp) {
         grid-template-columns: 1fr;
+        padding:25px 1%;
       }
       .contact_us_header {
         padding: 100px 60px;
         @media screen and (max-width: $tablet_bp) {
           padding: 0px 30px;
+          padding-top: 20px;
           display: grid;
           justify-content: center;
         }
